# opac_output_parser

./: .gitignore  README.md  license.md  pyproject.toml  requirements.txt  setup.py
docs/: many_records.html  whatisneeded.txt
sampledata/: small.html  small_full.html
src/opac_output_parser/: __init__.py  opac_output_parser.py  parser.py  version.py
