[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools>=61', 'setuptools_scm[toml]>=6.2']  # PEP 508 specifications.
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']  # list of folders that contain the packages (['.'] by default)
include = ['opac_output_parser*']  # package names should match these glob patterns (['*'] by default)
exclude = ['tests*']  # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.dynamic]
version = {attr = 'opac_output_parser.VERSION'}
dependencies = {file = 'requirements.txt'}

[project]
name = 'OPAC output parser'
description = ('Utility to parse the HTML and extract metdata '
               'from print output from a Voyager'
			   'library catalogue search.'
readme = 'README.md'
keywords =['UBC Library', 'Voyaer', 'library metadata'
		   'University of British Columbia', 'UBC', 'library.ubc.ca'] 
authors = [{name='Paul Lesack', email='paul.lesack@ubc.ca'}]
classifiers = ['Development Status :: 4 - Beta',
			   'Environment :: Console',
			   'Intended Audience :: Education',
			   'License :: OSI Approved :: MIT License',
			   'Topic :: Education',
			   'Topic :: Internet :: WWW/HTTP :: Site Management',
			   'Topic :: Utilities']
requires-python = '>=3.6'
dynamic = ['version', 'dependencies']
#dynamic = ['version']

[tools.setuptools]
license-files = ['LICEN[CS]*']

[project.urls]
Homepage = 'https://ubc-library-rc.github.io/opac_output_parser'
Documentation = 'https://ubc-library-rc.github.io/opac_output_parser'
Repository = 'https://github.com/ubc-library-rc/opac_output_parser.git'
Tracker = 'https://github.com/ubc-library-rc/opac_output_parser/issues'
#changelog = 'https://github.com/me/spam/blob/master/CHANGELOG.md'

[project.scripts]
#This should be restructured one day
opac_output_parser = 'opac_output_parser:main'
